# sandbox-py

./: .envrc  .gitignore  .pre-commit-config.yaml  bak.pyproject.toml  docker-compose.yml  editorconfig  pyproject.toml  setup.cfg
alembic/: env.py  script.py.mako
docker/fastapi-mock/: Dockerfile  app.py
docker/flask-mock/: Dockerfile  app.py
docker/sandbox-db/: my.cnf
docker/sandbox-db/docker-entrypoint-initdb.d/: 00_create_user.sql
src/: context.py  env.py  logger.py  main.py
src/db/: models.py  session.py
src/es/: connection.py  document.py  query.py
src/interface/: interface.py
src/services/: material.py
src/utils/: env.py
